Update 3.Analyze Memory w Volatility.md

--- a/3.Analyze Memory w Volatility.md
+++ b/3.Analyze Memory w Volatility.md
@@ -21,4 +21,108 @@ python [Name of volatility python script] -h
   * and press Enter to display the help guide for Volatility.
   * On this screen, you should see a number of configurability options for Volatility, as well as a list of the available plug-ins and their purpose. In the next steps, we will be using the `windows.info.Info, windows.pstree.PsTree, windows.netscan.NetScan, and windows.dlllist.DllList` plug-ins. Take a moment to locate each plug-in in the help guide and review the description.
     * **windows.info.Info** : Shows OS and kernel details of the memory sample being analyzed
-    *  **windows.pstree.PsTree** : Plugin for listing processes in a tree based on their parent process ID.
+    * **windows.pstree.PsTree** : Plugin for listing processes in a tree based on their parent process ID.
+    * **windows.netscan.NetScan** : Scans for network objects present in a particular windows memory image.
+    * **windows.dlllist.DllList** : Lists loaded modules in a particular windows memory image.
+
+#### Step 4
+  * At the command prompt, execute
+```
+python vol.py -f <filepath> windows.info.Info
+```
+  * To run Volatility's `windows.info.Info plugin` on the `[specified .mem]` file.
+
+**[NOTE]** Take note of the NtMajorVersion value. (If needed for investigation)
+
+#### Step  6
+  * Execute the
+```
+python vol.py -f [filepath] windows.pstree.PsTree > [filepath of location you want to write the .txt file to]
+```
+#### Step 7
+  * Open the newly saved `.txt` file in a `text editor` of choice.
+
+---
+
+#### List of Some Common Terms to be Seen
+  * **PID** : Process ID
+  * **PPID** : Parent Process ID
+  * **ImageFileName: The name of the process
+  * **Offset**: Hexadecimal value corresponding to the location in memory where the process is running.
+  * **Handles** : Number of handles being used by the process.
+  * **Threads** : Number of threads being used by the process.
+  * **SessionID** : Windows Session ID, which represents a collection of processes that share a common users session.
+  * **Wow64** : Is the process running on the WOW64 subsystem (1 = true, 0 = false)? Processes running in the WOW64 subsystem are 32-bit processes on a 64-bit system.
+  * **CreateTime** : When the process was created.
+  * **ExitTime** : When the process was terminated.
+
+---
+
+**NOTE**:
+  * Using plugins like pstree to view running processes is typically one of the first steps in analyzing a memory dump. During this process, you will routinely encounter common and completely benign Windows processes, but you must remain diligent - threat actors will often disguise malicious processes as normal processes, or embed malicious processes within a normal process.
+    * For example, a threat actor may camouflage processes to appear legitimate by renaming processes that will trick the eye - like "lsas.exe" or "rundl32.exe". At a glance, do you see the typos? Conducting due diligence, such as googling unfamiliar processes or checking for correct parent child processes, is always considered best practice in the analysis workflow.
+
+---
+
+#### Step 8
+Looking for `network connections`. Use `netscan plugin`.
+
+  * At the command prompt, execute
+
+```
+python vol.py -f [filepath] windows.netscan.NetScan > [filepath to write out .txt file to]
+```
+  * To run Volatility's NetScan plugin on the `specified .mem` file and save the results to a text file in the folder.
+  * Open the newly created `netscan` file in the text editor previously used.
+
+---
+
+#### Step 9
+Use the `Text Editor` to review the output from the netscan plug-in, where you should see the outbound connections made by the host machine. In this list, you should see the following columns:
+  * **Offset** - Hexadecimal value corresponding to the location in memory where the network connection is running.
+  * **Proto** - The protocol in use for this network connection.
+  * **LocalAddr** - The local IP address that our system is connecting from.
+  * **LocalPort** - The local port that our system is connecting from.
+  * **ForeignAddr** - The destination IP address that our local system is connecting to.
+  * **ForeignPort** - The destination port that our local system is connecting to.
+  * **State** - The current state of the network connection.
+  * **PID** - Process ID of the process responsible for the connection.
+  * **Owner** - Process name responsible for the connection.
+  * **Created** - Time and date the connection was started.
+
+**_Take note of the IP address associated with the host that the memory capture was taken from._**
+
+---
+
+#### Additional Information
+Now suppose you detected an unusual process and wanted to dive deeper into the related DLLs. For the purpose of this exercise, let's assume WSL.exe is malicious (it's not, it's Windows Subsystem for Linux). First, we will need to dump the DLLs associated with the process. To do this, we will use Volatility's dlllist.DllLis plug-in. This plug-in requires a PID as an input, so we will need to go back to the PsTree output to retrieve the PID for WSL.exe.
+  * **NOTE**: A DLL (short for Dynamic Link Library) is file containing compiled code and data that can be used be multiple programs simultaneously, which allows for reusability and greater efficiency. DLLs are often used in Windows-based cyber attacks for code execution and persistence. For forensic investigations, anomalies involving DLLs running in memory can be indicator of malicious activity.
+  * Locate the file in question in the `pstreeout` memory dump. Grab the PID for the file as it will be needed for the next step.
+
+---
+
+#### Step 10
+  * At the command prompt, execute
+
+```
+python vol.py -f <filepath> windows.dlllist.DllList --pid <pid> > [filepath to write out .txt file to]
+```
+  * (replacing <pid> with the PID value from above) to run Volatility's DllList plugin on the `specified .mem file` and save the results to a text file in the folder.
+
+---
+
+#### Additional Information
+In this list, you should see the following columns:
+  * **PID** - The Process ID for which DLL information is being displayed (in this case, the PID for wsl.exe)
+  * **Process** - The name of the process for which DLL information is being displayed.
+  * **Base** - The base address in memory where the DLL is loaded.
+  * **Size** - The size of the DLL in memory
+  * **Name** - The name of the DLL.
+  * **Path** - The file path for the DLL.
+  * **LoadTime** - The time that the DLL was loaded.
+
+
+
+
+
+
